--- a/pages/index.html
+++ b/pages/index.html
@@ -1,19 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TODO List</title>
     <link rel="stylesheet" href="../src/assets/styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <div class="wrapper">
         <div class="add-menu">
             <div class="menu-inputs">
-
+                <input id="title-input" placeholder="Title...">
+                <textarea id="description-input" placeholder="About..."></textarea>
             </div>
-            button.
+            <button id="menu-button">
+                <img src="../src/assets/images/cross.svg" alt="cross" id="menu-button-cross">
+            </button>
+        </div>
+
+        <div class="tasks">
+            <div class="task">
+                
+            </div>
         </div>
     </div>
 </body>
+
 </html>
