Adding tasks and fixing bugs in the frontend
I added the ability to add tasks to the list, and also fixed a few bugs: when adding a task, the “No tasks” warning disappeared only after reloading the page, also the inputs were not cleared.

--- a/pages/index.html
+++ b/pages/index.html
@@ -40,5 +40,6 @@
 <script type="module" src="../src/scripts/api/api.js"></script>
 <script type="module" src="../src/scripts/interface/manageButtons.js"></script>
 <script type="module" src="../src/scripts/interface/loadTasks.js"></script>
+<script type="module" src="../src/scripts/interface/addTask.js"></script>
 
 </html>
