--- a/pages/index.html
+++ b/pages/index.html
@@ -32,7 +32,29 @@
         </div>
 
         <div class="tasks" id="tasksContainer">
-            
+
+        </div>
+    </div>
+
+    <div class="share-screen">
+        <div id="share-menu">
+            <div class="share-buttons">
+                <button class="share-button" id="copy">
+                    <img src="../src/assets/images/share/copy.svg" alt="">
+                </button>
+                <button class="share-button" id="vk">
+                    <img src="../src/assets/images/share/vk.svg" alt="">
+                </button>
+                <button class="share-button" id="telegram">
+                    <img src="../src/assets/images/share/telegram.svg" alt="">
+                </button>
+                <button class="share-button" id="whatsapp">
+                    <img src="../src/assets/images/share/whatsapp.svg" alt="">
+                </button>
+                <button class="share-button" id="facebook">
+                    <img src="../src/assets/images/share/facebook.svg" alt="">
+                </button>
+            </div>
         </div>
     </div>
 </body>
@@ -41,5 +63,6 @@
 <script type="module" src="../src/scripts/interface/manageButtons.js"></script>
 <script type="module" src="../src/scripts/interface/loadTasks.js"></script>
 <script type="module" src="../src/scripts/interface/addTask.js"></script>
+<script type="module" src="../src/scripts/interface/shareScreen.js"></script>
 
 </html>
