Add info screen

--- a/pages/index.html
+++ b/pages/index.html
@@ -85,6 +85,18 @@
             </div>
         </div>
     </div>
+
+    <div class="info-screen">
+        <div id="info-wrapper">
+            <div class="info-menu">
+                <p class="info-header">Task info</p>
+                <div class="info-texts">
+                    <p type="text" id="info-title" class="info-title">Test</p>
+                    <p name="" id="info-description" class="info-description">Test</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 <script type="module" src="../src/scripts/api/api.js"></script>
